Bug 351106 - Crash using "Create Copy from Current Image"
Summary: Crash using "Create Copy from Current Image"
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-09 04:38 UTC by Orlan Rod
Modified: 2016-09-27 10:27 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
GDB of the crash (Krita 3 - Ubuntu 14.04 Unity) (12.30 KB, text/plain)
2016-07-20 14:23 UTC, mvowada
Details
Video example (Krita 3 - Ubuntu 14.04 Unity) (453.63 KB, video/mp4)
2016-07-20 14:25 UTC, mvowada
Details
Krita Windows 10 Vid (1.75 MB, video/mp4)
2016-09-14 02:02 UTC, Orlan Rod
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Orlan Rod 2015-08-09 04:38:54 UTC
If i create a copy of the canvas, a couple of seconds later, it crashes. I tried it multiple times, and it repeats the crash. Using Krita 2.9.6



Reproducible: Always

Steps to Reproduce:
1.Have a canvas open.
2.Create Copy From Current Image
3.Wait a couple seconds.

Actual Results:  
Krita crashes

Expected Results:  
Creates copy of image without crashing

Windows 10 64bit. 
Intel i7 4770k
16GB ram
Comment 1 wolthera 2015-08-09 16:13:36 UTC
Can't reproduce this in Ubuntu 14.04 with Gnome 3, which is a pity, because then we could make a crash-report.

Hm... this however... may be a memory leak? Could you watch Krita's memory usage when doing these steps? The windows task manager can help you, but Krita also tells you something about what it thinks it consumes in the status bar below. You can hover over the image-dimensions to get the detailed information.
Comment 2 wolthera 2015-08-09 16:14:17 UTC
setting this to needs info, of course.
Comment 3 Orlan Rod 2015-08-09 18:34:35 UTC
(In reply to wolthera from comment #2)
> setting this to needs info, of course.

I tried again, this time i got a texture memory error. It caused the intel gpu driver to crash and restart. I was recording the screen, but the video file corrupted when it crashed. I am attempting to record it again, but i didn't see any crazy changes to memory from the task manager or the canvas memory info.
Comment 4 Orlan Rod 2015-08-09 18:37:28 UTC
(In reply to wolthera from comment #2)
> setting this to needs info, of course.

the driver version i have is: 10.18.15.4256
Comment 5 Halla Rempt 2016-06-16 11:17:28 UTC
How big is your image? I tried on a 4gb SP3 without any problems.
Comment 6 Halla Rempt 2016-06-16 11:17:53 UTC
Oh, and can you still reproduce this reliably with Krita 3.0?
Comment 7 mvowada 2016-07-20 14:23:50 UTC
Created attachment 100201 [details]
GDB of the crash (Krita 3 - Ubuntu 14.04 Unity)

Hi, this happens to me with Krita 3 and a plain new document (CMYK, 3508 x 2480 px, 72 dpi, 2 layers), when I choose: "File > Create Copy From Current Image" (video example below).
Comment 8 mvowada 2016-07-20 14:25:17 UTC
Created attachment 100202 [details]
Video example (Krita 3 - Ubuntu 14.04 Unity)
Comment 9 wolthera 2016-07-21 10:34:28 UTC
Hm... it works here on ubuntu 16.04...
Comment 10 z-uo 2016-08-02 14:30:14 UTC
I got the same crash on xubuntu 16.04 with a tiny new image on the last krita 3.0.1 appimage.
Comment 11 Patrice Kouame 2016-09-10 21:37:30 UTC
krita 3.0.1 2db4438671e17002c7b02e3ad3a5208930765e4f
macOS Sierra
Xcode 8 
RelWithDebInfo

Cannot reproduce.  Created multiple copies.  Deleted them...Rinse and Repeat...seems to work fine.
Comment 12 Orlan Rod 2016-09-14 01:43:40 UTC
I still have this problem, even with the couple of updates since i last open this bug report, and updated Windows 10. I'll work with anyone to get to the bottom of it. 

Windows 10 64bit. 
Intel i7 4770k
16GB ram
Comment 13 Orlan Rod 2016-09-14 02:02:07 UTC
Created attachment 101077 [details]
Krita Windows 10 Vid

Demonstration of the crash on Windows 10
Comment 14 Halla Rempt 2016-09-15 12:13:42 UTC
Yes, I've managed to reproduce!
Comment 15 Halla Rempt 2016-09-15 12:20:43 UTC
This crash only happens if Instant Preview is enabled. If I disable instant preview, I can use the function; if I re-enable it afterwards, instant assert.
Comment 16 Dmitry Kazakov 2016-09-16 15:00:37 UTC
Git commit 47e8ee0294ce0441ce93ec6a838dad5bca13130f by Dmitry Kazakov.
Committed on 16/09/2016 at 14:59.
Pushed by dkazakov into branch 'master'.

Fix crash when copying the image with Instant Preview active

Fixes T3758,T3709

M  +5    -0    libs/image/kis_base_node.cpp
M  +2    -0    libs/image/kis_base_node.h
M  +1    -1    libs/image/kis_group_layer.h
M  +1    -0    libs/image/kis_image.cc
M  +10   -11   libs/image/kis_layer.cc
M  +1    -1    libs/image/kis_layer.h
M  +1    -1    libs/image/kis_mask.h
M  +1    -1    libs/image/kis_paint_layer.h
M  +1    -1    libs/image/kis_selection_based_layer.h
M  +1    -1    libs/image/lazybrush/kis_colorize_mask.h
M  +1    -1    libs/ui/flake/kis_shape_layer.h

http://commits.kde.org/krita/47e8ee0294ce0441ce93ec6a838dad5bca13130f
Comment 17 Halla Rempt 2016-09-27 10:27:04 UTC
Git commit bab3d2bf1e0423d45b3a7dfe089db82589fcf21b by Boudewijn Rempt, on behalf of Dmitry Kazakov.
Committed on 27/09/2016 at 10:02.
Pushed by rempt into branch 'krita/3.0.1'.

Fix crash when copying the image with Instant Preview active

Fixes T3758,T3709

M  +5    -0    libs/image/kis_base_node.cpp
M  +2    -0    libs/image/kis_base_node.h
M  +1    -1    libs/image/kis_group_layer.h
M  +1    -0    libs/image/kis_image.cc
M  +10   -11   libs/image/kis_layer.cc
M  +1    -1    libs/image/kis_layer.h
M  +1    -1    libs/image/kis_mask.h
M  +1    -1    libs/image/kis_paint_layer.h
M  +1    -1    libs/image/kis_selection_based_layer.h
M  +1    -1    libs/ui/flake/kis_shape_layer.h

http://commits.kde.org/krita/bab3d2bf1e0423d45b3a7dfe089db82589fcf21b