Fix crash when copying the image with Instant Preview active

Fixes T3758,T3709
BUG:351106