libs/image/lazybrush/kis_colorize_mask.h
@@ -68,7 +68,7 @@ public:
 
     QIcon icon() const;
 
-    void setImage(KisImageWSP image);
+    void setImage(KisImageWSP image) Q_DECL_OVERRIDE;
     bool accept(KisNodeVisitor &v);
     void accept(KisProcessingVisitor &visitor, KisUndoAdapter *undoAdapter);
 
