libs/ui/flake/kis_shape_layer.h
@@ -74,7 +74,7 @@ public:
     bool allowAsChild(KisNodeSP) const;
 
 
-    virtual void setImage(KisImageWSP image);
+    void setImage(KisImageWSP image) Q_DECL_OVERRIDE;
 
     virtual KisLayerSP createMergedLayerTemplate(KisLayerSP prevLayer);
     virtual void fillMergedLayerTemplate(KisLayerSP dstLayer, KisLayerSP prevLayer);
